# AtomHabitsDRFApi

./: .env.example  .gitlab-ci.yml  README.md  docker-compose-local.yml  docker-compose-server.yml  dockerfile  pyproject.toml
bots/management/commands/: runtelegrambot.py
config/: settings.py  urls.py
habits/: models.py  paginators.py  permissions.py  serializers.py  tasks.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_remove_habit_pleasant_habit_habit_related_habit_and_more.py
habits/tests/: base.py  test_views.py
nginx/local/: default.conf
nginx/server/: default.conf
users/: models.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_telephone_alter_user_town.py  0003_user_telegram_chat_id.py
